--- a/pages/contact/contact.css
+++ b/pages/contact/contact.css
@@ -5,7 +5,7 @@
   --grad-light: #c4f0ff;
   --grad-dark: #00bfff;
   --input-toggle: #00bfff;
-  --input-location: #38cdff;
+  --input-location: #71dcff;
   --border-color: #0083ae;
   --drop-shadow: drop-shadow(0 2px 6px rgba(0, 0, 0, 0.3));
   --transition-in: all 0.2s ease-out;
@@ -13,7 +13,7 @@
   --text-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
   --box-shadow-inset: inset 0 4px 6px rgba(0, 0, 0, 0.3);
   --inset-shadow: inset 0 4px 8px rgba(0, 0, 0, 0.4);
-  --border: 1px solid #fff;
+  --border: 1px solid #7cb8f5;
 }
 * {
   box-sizing: border-box;
@@ -23,7 +23,7 @@ html {
   scrollbar-width: thin;
   scrollbar-color: #2d5567 #000;
   background: linear-gradient(to bottom, var(--grad-dark), var(--grad-light));
-  transition: all 1s ease-out;
+  transition: all 0.5s ease-out;
 }
 html.dark {
   --primary-color: #fff;
@@ -33,7 +33,7 @@ html.dark {
   --input-toggle: #171f27;
   --input-location: #283644;
   --border-color: #7cb8f5;
-  --border: 1px solid #ecf0f3;
+  --border: 1px solid #2f3f4f;
   background-color: var(--secondary-color);
   color: var(--primary-color);
 }
