--- a/pages/weather/weather.css
+++ b/pages/weather/weather.css
@@ -70,12 +70,11 @@ html::-webkit-scrollbar {
   outline: none;
 } */
 main {
-  height: calc(var(--vh, 1vh) * 100);
+  height: 100vh;
   display: flex;
   flex-direction: column;
   text-align: center;
   align-items: center;
-  justify-content: space-around;
   padding: clamp(0.4rem, 3vw, 1rem);
 }
 p,
@@ -101,7 +100,7 @@ a {
   color: inherit;
 }
 .themer {
-  margin: 0 auto -1rem;
+  margin: 2rem auto;
 }
 
 /* The switch - the box around the slider */
@@ -221,6 +220,7 @@ input:checked + .slider:before {
   text-align: center;
   justify-content: space-between;
   margin: -0.2rem auto;
+  padding: -0.2rem auto;
   max-width: 340px;
   width: 100%;
 }
